test/analyze/type_check/binary_operation/add.myte
module Test

fun main() {
  // Non-erroring cases
  (1 + 1: Int);
  (1 + 2 + 3 + 4: Int);

  // If only one type is addable error and type expression with that type
  (1 + true: Int);

  // If neither type is addable error on both sides but do not enforce type for expression
  (true + (): (Int) -> Int);
}